--- a/.gitignore
+++ b/.gitignore
@@ -302,9 +302,6 @@ paket-files/
 # CodeRush personal settings
 .cr/personal
 
-# Python Tools for Visual Studio (PTVS)
-__pycache__/
-*.pyc
 
 # Cake - Uncomment if you are using it
 # tools/**
@@ -348,3 +345,26 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Python Tools for Visual Studio (PTVS)
+__pycache__/
+*pyc
+
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/ 
+
+#project specific
+user_data/
+
+# Django #
+*.log
+*.pot
+local_settings.py
+db.sqlite3
+*/media/**
